        BoolVariable(), EnumVariable(), ListVariable(), PackageVariable()
        and PathVariable() functions.
        
     -  Document the Progress() function.

     -  Reorganize the chapter and sections describing the different
        types of environments and how they interact.  Document the
        SetDefault() method.  Document the PrependENVPath() and
        AppendENVPath() functions.

     -  Reorganize the command-line arguments chapter.

     -  Collect some miscellaneous sections into a chapter about
        configuring build output.

  - Man page updates:

     -  Document suggested use of the Visual C/C++ /FC option to fix
        the ability to double-click on file names in compilation error
        messages.

     -  Document the need to use Clean() for any SideEffect() files that
        must be explicitly removed when their targets are removed.

     -  Explicitly document use of Node lists as input to Dependency().

From Gary Oberbrunner:

  - Document use of the GetBuildFailures() function in the User's Guide.

From Alexey Zezukin:

  - Fix incorrectly swapped man page descriptions of the --warn= options
    for duplicate-environment and missing-sconscript.



RELEASE 0.98.5 - Sat, 07 Jun 2008 08:20:35 -0700

  From Benoit Belley:

  - Fix the Intel C++ compiler ABI specification for EMT64 processors.

  From David Cournapeau:

  - Issue a (suppressable) warning, not an error, when trying to link
    C++ and Fortran object files into the same executable.

  From Steven Knight:

  - Update the scons.bat file so that it returns the real exit status
    from SCons, even though it uses setlocal + endlocal.

  - Fix the --interactive post-build messages so it doesn't get stuck
    mistakenly reporting failures after any individual build fails.

  - Fix calling File() as a File object method in some circumstances.

  - Fix setup.py installation on Mac OS X so SCons gets installed