@@ -125,8 +125,6 @@
 
   XXX - - warn=
 
-  XXX ARGLIST
-
   -->
 
 <book>
